Fixed alignment of Icons & Buttons in Forms, disable scrolling when navigation is displayed

--- a/src/app/common/signup-form/signup-form.component.scss
+++ b/src/app/common/signup-form/signup-form.component.scss
@@ -10,6 +10,10 @@
          max-width: 400px;
          width: 100%;
          margin-bottom: 1rem;
+
+         mat-icon {
+             margin-right: 8px;
+         }
      }
 }
 
